--- a/supermedia_residentials/residentials/static/style.css
+++ b/supermedia_residentials/residentials/static/style.css
@@ -1,9 +1,37 @@
 body {
-    /*color: red;*/
     font-size: 50px;
-    /*border: 1px solid red;*/
 }
 
-#footer {
-    font-size: 15px;
+.header {
+    width: 100%;
+    background-color: blue;
 }
+
+.header .btn {
+    display: inline;
+    margin: 0.25rem;
+}
+
+* {
+  box-sizing:border-box;
+}
+
+.list {
+    display: flex;
+    flex-wrap:wrap;
+    padding: 10rem;
+}
+
+.list div {
+    width:100%;
+    max-width: 50%;
+    flex: 1 0 50%;
+    padding: 1em;
+    border:1px solid black;
+}
+
+.footer {
+    font-size: 10px;
+}
+
+
