--- a/supermedia_residentials/residentials/templates/index.html
+++ b/supermedia_residentials/residentials/templates/index.html
@@ -5,33 +5,33 @@
       {% block style %}
       <link rel="stylesheet" href="static/style.css" />
     {% endblock %}
-      <title>{% block title %}{% endblock %} | Osiedla Supermedia |</title>
+      <title>{% block title %}| Osiedla Supermedia | {% endblock %} </title>
     {% endblock %}
   </head>
   <body>
-  <div style="width: 100%; background-color: blue">
-    <button style="display: inline; margin: 0.25rem" id="content1">{% block content1 %} <a href="http://supermedia.pl">
-      <img src="static/logoSM.png" alt="logoSM"><p>osiedla Supermedia</p></a> {% endblock %}</button>
-    <button style="display: inline; margin: 0.25rem" id="content2">{% block content2 %} Raport {% endblock %}</button>
-    <button style="display: inline; margin: 0.25rem" id="content3">{% block content3 %} Załóż MPK {% endblock %}</button>
-    <button style="display: inline; margin: 0.25rem" id="content4">{% block content4 %} Dodaj / Edytuj osiedle {% endblock %}</button>
-    <button style="display: inline; margin: 0.25rem" id="content5">{% block content5 %} Dodaj / Edytuj dewelopera {% endblock %}</button>
-    <button style="display: inline; margin: 0.25rem" id="content6">{% block content6 %} Dodaj / Edytuj kontakt {% endblock %}</button>
-    <button style="display: inline; margin: 0.25rem" id="content7">{% block content7 %} Dodaj / Edytuj generalnego wykonawcę {% endblock %}</button>
-    <button style="display: inline; margin: 0.25rem" id="content8">{% block content8 %} Szukaj {% endblock %}</button>
-    <button style="display: inline; margin: 0.25rem" id="content9">{% block content9 %} Logowanie {% endblock %}</button>
-  </div>
 
-  <div style="width: 100%; background-color: #ff0000">
-    <div  style="display: inline; margin: 20rem" id="content10">{% block content10%}txt1 {% endblock %}</div>
-    <div  style="display: inline; margin: 20rem" id="content11">{% block content11 %}txt2 {% endblock %}</div>
-  </div>
+    <header class="header">
+    <button id="content1">{% block content1 %} <a href="http://supermedia.pl">
+      <img src="static/logoSM.png" alt="logoSM"></a> <p>Osiedla Supermedia</p>{% endblock %}</button>
+    <button class="btn" id="content2">{% block content2 %} Raport {% endblock %}</button>
+    <button class="btn" id="content3">{% block content3 %} Załóż MPK {% endblock %}</button>
+    <button class="btn" id="content4">{% block content4 %} Dodaj / Edytuj osiedle {% endblock %}</button>
+    <button class="btn" id="content5">{% block content5 %} Dodaj / Edytuj dewelopera {% endblock %}</button>
+    <button class="btn" id="content6">{% block content6 %} Dodaj / Edytuj kontakt {% endblock %}</button>
+    <button class="btn" id="content7">{% block content7 %} Dodaj / Edytuj generalnego wykonawcę {% endblock %}</button>
+    <button class="btn" id="content8">{% block content8 %} Szukaj {% endblock %}</button>
+    <button class="btn" id="content9">{% block content9 %} Logowanie {% endblock %}</button>
+    </header>
 
-
-    <div id="footer">
-      {% block footer %}
-        © Copyright 2018 by <a href="http://...">Strachal Disaster Corporation</a>.
-      {% endblock %}
+    <div class="list">
+        <div  id="content10">{% block content10%} txt1 {% endblock %}</div>
+        <div  id="content11">{% block content11 %} txt2 {% endblock %}</>
     </div>
+
+    <footer class="footer">
+     {% block footer %} © Copyright 2020 by <a href="http://...">Strachal Disaster Corporation</a></p>
+     {% endblock %}
+    </footer>
+
   </body>
 </html>
