--- a/supermedia_residentials/residentials/templates/index.html
+++ b/supermedia_residentials/residentials/templates/index.html
@@ -13,15 +13,15 @@
     <header class="header">
     <button id="content1">{% block content1 %} <a href="http://supermedia.pl">
       <img src="static/logoSM.png" alt="logoSM"></a> <p>Osiedla Supermedia</p>{% endblock %}</button>
-    <button class="btn" id="content2">{% block content2 %} Raport {% endblock %}</button>
-    <button class="btn" id="content3">{% block content3 %} Załóż MPK {% endblock %}</button>
-    <button class="btn" id="content8">{% block content8 %} Szukaj {% endblock %}</button>
-    <button class="btn" id="content9">{% block content9 %} Logowanie {% endblock %}</button>
+    <button class="btn" id="content2">{% block content2 %} <a href="raport.html">Raport</a>{% endblock %}</button>
+    <button class="btn" id="content3">{% block content3 %} <a href="#">Załóż MPK</a>{% endblock %}</button>
+    <button class="btn" id="content8">{% block content8 %} <a href="#">Szukaj</a> {% endblock %}</button>
+    <button class="btn" id="content9">{% block content9 %} <a href="#">Logowanie</a>{% endblock %}</button>
     </header>
 
     <div class="list">
-        <div  id="content10">{% block content10%} txt1 {% endblock %}</div>
-        <div  id="content11">{% block content11 %} txt2 {% endblock %}</>
+        <div  id="content10">{% block content10%} tu będzie znajdowała się lista osiedli, z możliwością filtrowania {% endblock %}</div>
+        <div  id="content11">{% block content11 %} tu będzie znajdował się widok szczegółowy danego osiedla {% endblock %}</>
     </div>
 
     <footer class="footer">
