--- a/supermedia_residentials/residentials/templates/raport.html
+++ b/supermedia_residentials/residentials/templates/raport.html
@@ -1,10 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Raport</title>
-</head>
-<body>
-<P>raport/P>
-</body>
-</html>
+{% extends "index.html" %}
+
+{% block content %}
+
+<p>Wielka Dupa<p>
+{% endblock %}
