--- a/supermedia_residentials/residentials/templates/add_building.html
+++ b/supermedia_residentials/residentials/templates/add_building.html
@@ -1,10 +1,11 @@
 {% extends "header_footer.html" %}
 
-{% block template %}
-<form>
-    {{ form.as_p }}
-    <input type="submit" value="Zapisz">
 
-</form>
+{% block template %}
+    <form method="POST"> {% csrf_token %}
+        {{ form.as_p }}
+        <input type="submit" value="Zapisz"/>
+
+    </form>
 
 {% endblock %}
