--- a/supermedia_residentials/residentials/templates/raport.html
+++ b/supermedia_residentials/residentials/templates/raport.html
@@ -1,6 +1,6 @@
-{% extends "index.html" %}
+{% extends "header_footer.html" %}
 
-{% block content %}
+{% block template %}
 
-<p>Wielka Dupa<p>
+<p>Raport<p>
 {% endblock %}
