--- a/supermedia_residentials/residentials/templates/header_footer.html
+++ b/supermedia_residentials/residentials/templates/header_footer.html
@@ -3,36 +3,65 @@
   <head>
 
       <link rel="stylesheet" href="static/style.css" />
-
+          <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"/>
+      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+      <script src=">static/dom.js"></script>
       <title>| Osiedla Supermedia | </title>
 
   </head>
   <body>
 
     <header class="header">
-    <button id="content1"><a href="http://supermedia.pl">
-        <img src="static/logoSM.png" alt="logoSM"></a></button>
-    <button class="btn" id="content2"><a href="/">Osiedle Supermedia</a></button>
-    <button class="btn" id="content3"><a href="raport">Raport</a></button>
-    <button class="btn" id="content4"> <a href="add_mpk">Załóż MPK</a></button>
-    <button class="btn" id="content5"> <a href="search">Szukaj</a> </button>
-    <button class="btn" id="content6"><a href="login">Logowanie</a></button>
-    <button class="btn" id="content7"><a href="add_building">Dodaj osiedle</a></button>
-    </header>
 
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand" href="http://supermedia.pl"><img src="static/logoSM.png" alt="logoSM"></a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <a class="nav-link" href="/">Osiedla Supermedia</a>
+      </li>
+
+      <li class="nav-item">
+        <a class="nav-link" href="raport">Raport</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="add_mpk">Zaloz MPK</a>
+      </li>
+
+      <li class="nav-item">
+        <a class="nav-link" href="login">Logowanie</a>
+      </li>
+
+      <li class="nav-item">
+        <a class="nav-link" href="add_building">Dodaj osiedle</a>
+      </li>
+
+    </ul>
+    <form class="form-inline my-2 my-lg-0">
+      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Szukaj</button>
+    </form>
+  </div>
+</nav>
+  </header>
+
+    <div class="container">
+      <div class="row">
     {% block template %}
 
     dupa
 
     {% endblock %}
+       </div>
+    </div>
 
 
-
-
-
-
-    <footer class="footer">
-     {% block footer %} © Copyright 2020 by <a href="http://...">Strachal Disaster Corporation</a></p>
+    <footer class="col-12 footer">
+     {% block footer %} © Copyright 2020 by <a href="http://...">Strachal Disaster Corporation</a>
      {% endblock %}
     </footer>
 
