--- a/supermedia_residentials/residentials/templates/index.html
+++ b/supermedia_residentials/residentials/templates/index.html
@@ -2,71 +2,97 @@
 {% extends "header_footer.html" %}
 {% block template %}
 
-
-<div class="col-12 col-xl-9">
-    <div class="list_titles"><p>tu znajdą sie tytuły wyświetlanych kolumn listy osiedli</p></div>
-    <div class="filters">
-          <select>
-            <option selected disable="true">rok</option>
-              {% for buiding in list_complete %}
-              <option>{{ building.year_Launch_services }}</option>
-              {% endfor%}
-          </select>
-          <select>
-            <option selected disable="true">deweloper</option>
-              {% for buiding in list_complete %}
-              <option>{{ building.developer }}</option>
-              {% endfor%}
-          </select>
-                  <select>
-            <option selected disable="true">status</option>
-              {% for buiding in list_complete %}
-              <option>{{ building.developer }}</option>
-              {% endfor%}
-          </select>
-
-                  <select>
-            <option selected disable="true">kosztorys</option>
-              {% for buiding in list_complete %}
-              <option>{{ building.developer }}</option>
-              {% endfor%}
-          </select>
-
-
-        </div>
+<div class="col-12 col-xl-7">
+    <table class="table table-striped font-small" >
+        <thead>
+        <tr>
+            <th>lp</th>
+            <th>Numer KI</th>
+            <th>Nazwa osiedla</th>
+            <th>Adres osiedla</th>
+            <th>Ilosc HP</th>
+            <th>Ilosc LU</th>
+            <th>Dzielnia</th>
+            <th>Rok</th>
+            <th>Status</th>
+            <th>Akceptacja budzetu</th>
+            <th>Deweloper</th>
+            <th></th>
+        </tr>
+        </thead>
+        <tbody>
         {% block content6 %}
-          {% for building in list_complete %}
-          <div class="building" data-status="{{ building.building_name }}">
-            <p> {{ forloop.counter }} | {{ building.building_name }} |
-                {{ building.building_adres }} |
-                {{ building.quantity_HP }} |
-                {{ building.quantity_LU }} |
-                {{ building.GPON_node_localisation }} |
-                 {{ building.year_Launch_services }} |
-                {{ building.status }} |
-                {{ estimated_budget_accept }} |
-                {{ building.kind_of_inhabitation}} |
-                {{ building.services_provided}} |
-                {{ building.developer}} |
-                {{ building.MPK_number}} |
-
-            <button>wyświetl szczegóły osiedla</button>
-            <button>edytuj szczegóły osiedla</button>
-            </p>
-          </div>
-
-          {% endfor %}
+        {% for building in list_complete %}
+        <tr data-status="{{ building.building_name }}">
+            <td>{{ forloop.counter }}</td>
+            <td>{{ building.KI_number }}</td>
+            <td>{{ building.building_name }}</td>
+            <td>{{ building.building_adres }}</td>
+            <td>{{ building.quantity_HP }}</td>
+            <td>{{ building.quantity_LU }}</td>
+            <td>{{ building.GPON_node_localisation }}</td>
+            <td>{{ building.year_Launch_services }}</td>
+            <td>{{ building.status }}</td>
+            <td>{{ building.estimated_budget_accept }}</td>
+            <td>{{ building.developer }}</td>
+            <td><a class="btn btn-primary" href="edit_building/{{ building.id }}">edit</a></td>
+        </tr>
+        {% endfor %}
         {% endblock %}
+        </tbody>
+    </table>
+
+
+
+<!--    <div class="filters">-->
+<!--          <select>-->
+<!--            <option selected disable="true">rok</option>-->
+<!--              {% for buiding in list_complete %}-->
+<!--              <option>{{ building.year_Launch_services }}</option>-->
+<!--              {% endfor%}-->
+<!--          </select>-->
+<!--          <select>-->
+<!--            <option selected disable="true">deweloper</option>-->
+<!--              {% for buiding in list_complete %}-->
+<!--              <option>{{ building.developer }}</option>-->
+<!--              {% endfor%}-->
+<!--          </select>-->
+<!--                  <select>-->
+<!--            <option selected disable="true">status</option>-->
+<!--              {% for buiding in list_complete %}-->
+<!--              <option>{{ building.developer }}</option>-->
+<!--              {% endfor%}-->
+<!--          </select>-->
+
+<!--                  <select>-->
+<!--            <option selected disable="true">kosztorys</option>-->
+<!--              {% for buiding in list_complete %}-->
+<!--              <option>{{ building.developer }}</option>-->
+<!--              {% endfor%}-->
+<!--          </select>-->
+
+
+<!--        </div>-->
+
+
+
+
+<!--    -->
+
+
+
     <div class="sum">
         {% block content %}
         <p>tu będzie wyświetlana suma HP i LU </p>
+        {{ building.building_name }}
         {% endblock %}
     </div>
 </div>
 
-<div class="col-12 col-xl-3">
+<div class="col-12 col-xl-5">
     {% block content7 %} <img src="static/malbork.jpeg" alt="osiedleSM">
-    <p>kliknij w osiedle po lewej stronie a wyświetlony zostanie widok szczegółowy</p> {% endblock %}
+    <p>kliknij w osiedle po lewej stronie a wyświetlony zostanie widok szczegółowy</p>
+    {% endblock %}
 </div>
 
 
